# sat-solver

./: Cargo.toml  README.md  flake.nix  treefmt.nix
src/: cnf.rs  dimacs_parser.rs  lib.rs  main.rs
src/solver/: assignment.rs  cnf.rs  mod.rs  outcome.rs
tests/: runner.rs
tests/testcases/: .gitignore  README.md
tests/testcases/simple/: simple.dimacs
