[package]
name = "sat-solver"
version = "0.1.0"
edition = "2018"

[lib]
name = "sat_solver_core"
path = "src/lib.rs"

[[bin]]
name = "sat_solver"
path = "src/main.rs"

[profile.release]
debug = true # for flamegraph


[dependencies]

[dev-dependencies]
anyhow = "1"
envconfig = "0.11.1"
rayon = "1.11"
